--- a/GCWG06_HFT_20212.JSClient/wwwroot/index.html
+++ b/GCWG06_HFT_20212.JSClient/wwwroot/index.html
@@ -29,6 +29,7 @@
         </tbody>
     </table>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
