--- a/GCWG06_HFT_20212.JSClient/wwwroot/index.html
+++ b/GCWG06_HFT_20212.JSClient/wwwroot/index.html
@@ -16,6 +16,14 @@
         <button type="button" onclick="create()">Add Employee</button>
     </div>
 
+    <div id="updateformdiv">
+        <label>Employee Name</label>
+        <input type="text" id="employeeNameToUpdate" />
+        <label>Employee Salary</label>
+        <input type="text" value="0" id="employeeSalaryToUpdate" />
+        <button type="button" onclick="update()">Update Employee</button>
+    </div>
+
     <table>
         <thead>
             <tr>
